# sanitize-mails

./: README.md  pyproject.toml
src/sanitize_mails/: __init__.py
