[project]
name = "sanitize-mails"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "JostTim",email = "44769559+JostTim@users.noreply.github.com"},
]
dependencies = ["tqdm>=4.67.1", "chardet>=5.2.0"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[tool.pdm.scripts]
sanitize = {"call"="sanitize_mails:sanitize"}